<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>dynamic_removal</name>
  <version>1.0.0</version>
  <description>Dynamic obstacle removal from point clouds using prior maps</description>
  <maintainer email="1505940369@qq.com">Xinyi Xu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>

  <!-- PCL 依赖 -->
  <depend>pcl</depend>
  <depend>libpcl-all-dev</depend>

  <!-- OpenMP -->
  <build_depend>openmp</build_depend>

  <exec_depend>rviz2</exec_depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>